[package]
name = "num2exr"
version = "0.1.0"
edition = "2021"
description = "Creates an exr image from numbers"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/num2exr"
repository = "https://github.com/takanoriyanagitani/rs-num2exr"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 11

[dependencies.exr]
version = "1.72"
default-features = false
features = [
]
